# my_app

./: .gitignore  CMakeLists.txt
resources/: shader.hlsl
src/: app.cpp  app.h  main.cpp
src/components/: components.h
src/scenes/: my_scene.cpp  my_scene.h  scene.h
src/systems/: RendererSystem.cpp  RendererSystem.h  ResourceManagerSystem.cpp  resource_loader_system.cpp  resource_loader_system.h  system.h
